--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  json_serializable: ^3.2.5
+  json_annotation: ^3.0.1
+
   dio: ^3.0.9
 
   flutter_swiper: ^1.1.6
-
-  json_serializable: ^3.2.5
-  json_annotation: ^3.0.1
 
   flutter_webview_plugin: ^0.3.11
 
@@ -54,6 +54,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+   - assets/data/
    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
