--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,11 @@ dependencies:
   json_annotation: ^3.0.1
 
   dio: ^3.0.9
+  cached_network_image: ^2.2.0+1
 
   flutter_swiper: ^1.1.6
-
   flutter_webview_plugin: ^0.3.11
+  flutter_staggered_grid_view: ^0.3.0
 
 dev_dependencies:
   flutter_test:
